@@ -32,6 +32,7 @@ import io.trino.spi.type.Type;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
+import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 
@@ -41,6 +42,7 @@ import static io.trino.spi.type.BigintType.BIGINT;
 import static io.trino.spi.type.BooleanType.BOOLEAN;
 import static io.trino.spi.type.DoubleType.DOUBLE;
 import static io.trino.spi.type.VarcharType.VARCHAR;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertFalse;
@@ -209,53 +211,92 @@ public class TestTupleDomain
     @Test
     public void testOverlaps()
     {
-        assertTrue(overlaps(
-                ImmutableMap.of(),
-                ImmutableMap.of()));
+        TupleDomain<ColumnHandle> emptyTupleDomain = TupleDomain.withColumnDomains(
+                Map.of(A, Domain.create(ValueSet.copyOf(BIGINT, List.of()), false)));
+        assertThat(emptyTupleDomain.overlaps(emptyTupleDomain)).isEqualTo(false);
 
-        assertTrue(overlaps(
-                ImmutableMap.of(),
-                ImmutableMap.of(A, Domain.singleValue(BIGINT, 0L))));
+        verifyOverlaps(ImmutableMap.of(), ImmutableMap.of(), true);
 
-        assertFalse(overlaps(
+        verifyOverlaps(
                 ImmutableMap.of(),
-                ImmutableMap.of(A, Domain.none(BIGINT))));
+                ImmutableMap.of(A, Domain.singleValue(BIGINT, 0L)),
+                true);
 
-        assertFalse(overlaps(
+        verifyOverlaps(
+                ImmutableMap.of(),
                 ImmutableMap.of(A, Domain.none(BIGINT)),
-                ImmutableMap.of(A, Domain.none(BIGINT))));
+                false);
 
-        assertTrue(overlaps(
+        verifyOverlaps(
+                ImmutableMap.of(A, Domain.none(BIGINT)),
+                ImmutableMap.of(A, Domain.none(BIGINT)),
+                false);
+
+        verifyOverlaps(
                 ImmutableMap.of(A, Domain.all(BIGINT)),
-                ImmutableMap.of(A, Domain.all(BIGINT))));
+                ImmutableMap.of(A, Domain.all(BIGINT)),
+                true);
 
-        assertTrue(overlaps(
+        verifyOverlaps(
                 ImmutableMap.of(A, Domain.singleValue(BIGINT, 1L)),
-                ImmutableMap.of(B, Domain.singleValue(VARCHAR, utf8Slice("value")))));
-
-        assertTrue(overlaps(
                 ImmutableMap.of(A, Domain.singleValue(BIGINT, 1L)),
-                ImmutableMap.of(A, Domain.all(BIGINT))));
+                true);
 
-        assertFalse(overlaps(
+        verifyOverlaps(
                 ImmutableMap.of(A, Domain.singleValue(BIGINT, 1L)),
-                ImmutableMap.of(A, Domain.singleValue(BIGINT, 2L))));
+                ImmutableMap.of(B, Domain.singleValue(VARCHAR, utf8Slice("value"))),
+                true);
 
-        assertFalse(overlaps(
+        verifyOverlaps(
+                ImmutableMap.of(A, Domain.singleValue(BIGINT, 1L)),
+                ImmutableMap.of(A, Domain.all(BIGINT)),
+                true);
+
+        verifyOverlaps(
+                ImmutableMap.of(A, Domain.singleValue(BIGINT, 1L)),
+                ImmutableMap.of(A, Domain.singleValue(BIGINT, 2L)),
+                false);
+
+        verifyOverlaps(
                 ImmutableMap.of(
                         A, Domain.singleValue(BIGINT, 1L),
                         B, Domain.singleValue(BIGINT, 1L)),
                 ImmutableMap.of(
                         A, Domain.singleValue(BIGINT, 1L),
-                        B, Domain.singleValue(BIGINT, 2L))));
+                        B, Domain.singleValue(BIGINT, 2L)),
+                false);
 
-        assertTrue(overlaps(
+        verifyOverlaps(
+                ImmutableMap.of(
+                        A, Domain.singleValue(BIGINT, 1L),
+                        B, Domain.singleValue(BIGINT, 1L)),
+                ImmutableMap.of(
+                        B, Domain.singleValue(BIGINT, 1L)),
+                true);
+
+        verifyOverlaps(
+                ImmutableMap.of(
+                        A, Domain.singleValue(BIGINT, 1L),
+                        B, Domain.singleValue(BIGINT, 1L)),
+                ImmutableMap.of(
+                        B, Domain.singleValue(BIGINT, 2L)),
+                false);
+
+        verifyOverlaps(
+                ImmutableMap.of(
+                        A, Domain.singleValue(BIGINT, 1L)),
+                ImmutableMap.of(
+                        B, Domain.singleValue(BIGINT, 2L)),
+                true);
+
+        verifyOverlaps(
                 ImmutableMap.of(
                         A, Domain.singleValue(BIGINT, 1L),
                         B, Domain.all(BIGINT)),
                 ImmutableMap.of(
                         A, Domain.singleValue(BIGINT, 1L),
-                        B, Domain.singleValue(BIGINT, 2L))));
+                        B, Domain.singleValue(BIGINT, 2L)),
+                true);
     }
 
     @Test
@@ -679,18 +720,29 @@ public class TestTupleDomain
                 .hasMessageMatching("mapping function \\S+ returned null for 2");
     }
 
-    private boolean overlaps(Map<ColumnHandle, Domain> domains1, Map<ColumnHandle, Domain> domains2)
+    private void verifyOverlaps(Map<ColumnHandle, Domain> domains1, Map<ColumnHandle, Domain> domains2, boolean expected)
     {
         TupleDomain<ColumnHandle> tupleDomain1 = TupleDomain.withColumnDomains(domains1);
         TupleDomain<ColumnHandle> tupleDomain2 = TupleDomain.withColumnDomains(domains2);
-        return tupleDomain1.overlaps(tupleDomain2);
+        assertThat(tupleDomain1.overlaps(tupleDomain2)).isEqualTo(expected);
+        assertThat(tupleDomain2.overlaps(tupleDomain1)).isEqualTo(expected);
+        assertThat(tupleDomain1.intersect(tupleDomain2).isNone()).isEqualTo(!expected);
     }
 
     private boolean contains(Map<ColumnHandle, Domain> superSet, Map<ColumnHandle, Domain> subSet)
     {
         TupleDomain<ColumnHandle> superSetTupleDomain = TupleDomain.withColumnDomains(superSet);
         TupleDomain<ColumnHandle> subSetTupleDomain = TupleDomain.withColumnDomains(subSet);
-        return superSetTupleDomain.contains(subSetTupleDomain);
+        boolean contains = superSetTupleDomain.contains(subSetTupleDomain);
+        // Results from computing contains using union and using the method directly should match
+        assertThat(contains).isEqualTo(containsFromUnion(superSetTupleDomain, subSetTupleDomain));
+        return contains;
+    }
+
+    private static boolean containsFromUnion(TupleDomain<ColumnHandle> superSetTupleDomain, TupleDomain<ColumnHandle> subSetTupleDomain)
+    {
+        return subSetTupleDomain.isNone()
+                || columnWiseUnion(superSetTupleDomain, subSetTupleDomain).equals(superSetTupleDomain);
     }
 
     private boolean equals(Map<ColumnHandle, Domain> domains1, Map<ColumnHandle, Domain> domains2)
